Fix next stage button overlap

--- a/app/assets/stylesheets/retrospective.css.scss
+++ b/app/assets/stylesheets/retrospective.css.scss
@@ -452,7 +452,7 @@ ul {
 #end_current_time {
   position: absolute;
   margin-top: 10px;
-  margin-left: 50px;
+  margin-left: 35px;
   background-color: #df4b61;
   color: #ffffff !important;
   border: none;
